First version OK, need to make it a bookmarklet

--- a/index.html
+++ b/index.html
@@ -1,209 +1,8 @@
 <!DOCTYPE html> 
 <html manifest="cache.manifest"> 
-  <head> <title>d3 example</title> </head> 
+  <head> <title>M command plugin</title> </head> 
 
-  <body> 
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
-    wf wew eferjf erf jer fvdr dfvkfvsrd ifveriv eri<br />
+  <body>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="mcommand.js"></script>
 
