--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head> <title>M command plugin</title> </head> 
 
   <body>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="mcommand.js"></script>
+    <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>-->
+    <!--<script type="text/javascript" src="mcommand.js"></script>-->
+
+
+    Still in developpement : 
+    <a href="javascript:(function(){var head=document.getElementsByTagName('head')[0],
+        script=document.createElement('script');script.type='text/javascript';
+        script.src='http://localhost:8888/M-command/mcommand.js?' + Math.floor(Math.random()*99999);
+        head.appendChild(script);})(); void 0">M command</a>
 
   </body>
 </html>
