Removed useless console.log

--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -10,7 +10,7 @@
     Still in developpement : 
     <a href="javascript:(function(){var head=document.getElementsByTagName('head')[0],
         script=document.createElement('script');script.type='text/javascript';
-        script.src='http://localhost:8888/M-command/mcommand.js?' + Math.floor(Math.random()*99999);
+        script.src='http://localhost:8888/M-command/bookmarklet/mcommand.js?' + Math.floor(Math.random()*99999);
         head.appendChild(script);})(); void 0">M command</a>
 
   </body>
